[package]
name = "http-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls-manual-roots",
    "json",
] }
typed-json = "0.1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

rand = "0.8"
rand_distr = "0.4"
