[package]
name = "postgres-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7.10" }

rustls = { version = "0.22.4" }
rustls-pki-types = { version = "1", features = ["std"] }
tokio-postgres-rustls = "0.11.0"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

rand = "0.8"
rand_distr = "0.4"
